--- a/kubernetes/helm-charts/buildfarm/values.yaml
+++ b/kubernetes/helm-charts/buildfarm/values.yaml
@@ -137,6 +137,9 @@ shardWorker:
     # requests:
     #   cpu: 100m
     #   memory: 128Mi
+  persistentVolumeClaimRetentionPolicy:
+    whenDeleted: Retain
+    whenScaled: Retain
   storage:
     # the storage class for pv, leave empty will using default
     class: ""
